# l6-robot

./: .gitignore  BOM.md  CLAUDE.md  CODE_FEEDBACK.md  README.md  pyproject.toml  smoke_test.py
robot/: app.py  audio.py  core.py  detect.py  memory.py  models.py
testdata/: CREDITS.json  verify_scores.py
